--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 - Kedma Zuleika</p>
+            <p>2025 - Feito por <a href="https://github.com/PauLuke" target="_blank" rel="noopener noreferrer">Paulo Lucas</a></p>
             <p><a href="policy" target="_blank" rel="noopener noreferrer">Política de privacidade</a></p>
         </div>
     </footer>
