--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  <meta property="og:title" content="Revista Nosso Amiguinho" />
+    <meta property="og:description" content="Conheça a Revista Nosso Amiguinho!" />
+    <meta property="og:image" itemprop="image" content="https://nossoamiguinho.pages.dev/thumbnail.webp" />
+    <meta property="og:url" content="https://nossoamiguinho.pages.dev/" />
+    <meta property="og:type" content="website" />
     <title>Revista Nosso Amiguinho</title>
     <link rel="icon" type="image/x-icon" href="favicon.svg" />
     <meta name="description" content="Assine a Revista Nosso Amiguinho! Diversão, aprendizado e valores cristãos para crianças de 6 a 12 anos. Fale com a representante Kedma Zuleika e garanta já a sua!">
